--- a/res/xml/ethernet_settings.xml
+++ b/res/xml/ethernet_settings.xml
@@ -20,7 +20,8 @@
         <CheckBoxPreference
             android:key="toggle_eth"
             android:title="@string/eth_quick_toggle_title"
-            android:summary="@string/eth_quick_toggle_summary"
+            android:summaryOn="@string/eth_toggle_summary_off"
+            android:summaryOff="@string/eth_toggle_summary_on"
             android:persistent="false" />
         <Preference
             android:title="@string/eth_conf_perf_title"
