Check in code for Kelly2.Blue Add new option to allow user to enable/disable soft keyboard Autor:Kelly2.Blue@gmail.com

--- a/res/xml/keyboard_settings.xml
+++ b/res/xml/keyboard_settings.xml
@@ -35,5 +35,11 @@
             android:summaryOn="@string/auto_punctuate_summary"
             android:summaryOff="@string/auto_punctuate_summary"
             android:persistent="false"/>
+    <CheckBoxPreference
+            android:key="softkeyboard"
+            android:title="@string/softkeyboard_enable"
+            android:summaryOn="@string/softkeyboard_enable_summary"
+            android:summaryOff="@string/softkeyboard_enable_summary"
+            android:persistent="false"/>
             
 </PreferenceScreen>
