--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -26,6 +26,12 @@
                 android:targetClass="com.android.settings.LocalePicker"/>
     </PreferenceScreen>
 
+    <PreferenceScreen android:title="@string/keyboard_layout_title"
+		android:summary="@string/keyboard_layout_summary">
+		<intent android:action="android.intent.action.MAIN"
+			android:targetPackage="com.android.settings" android:targetClass="com.android.settings.KeyboardPicker" />
+    </PreferenceScreen>
+
     <PreferenceCategory android:key="text_category"
             android:title="@string/text_category" />
 
