Add keyboard layout setting
Change-Id: I8c1b7689c96c07676abf0653388940273e4aa935

--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -29,6 +29,14 @@
     </PreferenceScreen>
 
     <PreferenceScreen
+            android:title="@string/keyboard_layout_title"
+            android:summary="@string/keyboard_layout_summary">
+        <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.settings"
+                android:targetClass="com.android.settings.KeyboardPicker" />
+    </PreferenceScreen>
+
+    <PreferenceScreen
             android:title="@string/user_dict_settings_title"
             android:summary="@string/user_dict_settings_summary">
         <intent android:action="android.intent.action.MAIN"
