--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -183,6 +183,17 @@
                 android:targetClass="com.android.settings.DateTimeSettings" />
         </com.android.settings.IconPreferenceScreen>
 
+	<!-- Advanced settings-->
+
+        <com.android.settings.IconPreferenceScreen
+            settings:icon="@drawable/ic_settings_applications"
+            android:title="@string/advanced_settings_title">
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.settings"
+                android:targetClass="com.android.settings.AdvancedSettings" />
+        </com.android.settings.IconPreferenceScreen>
+
         <!-- About Device -->
 
         <com.android.settings.IconPreferenceScreen
