--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -46,6 +46,7 @@
     <item msgid="7001195990902244174">"2 minutes"</item>
     <item msgid="5721688686241190620">"10 minutes"</item>
     <item msgid="7156442995039264948">"30 minutes"</item>
+    <item msgid="1781492122915870416">"Ne jamais désactiver"</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Très lente"</item>
