--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -46,6 +46,7 @@
     <item msgid="7001195990902244174">"2 minuti"</item>
     <item msgid="5721688686241190620">"10 minuti"</item>
     <item msgid="7156442995039264948">"30 minuti"</item>
+    <item msgid="1781492122915870416">"Mai timeout"</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Molto lenta"</item>
