--- a/res/values-pt/arrays.xml
+++ b/res/values-pt/arrays.xml
@@ -46,6 +46,7 @@
     <item msgid="7001195990902244174">"2 minutos"</item>
     <item msgid="5721688686241190620">"10 minutos"</item>
     <item msgid="7156442995039264948">"30 minutos"</item>
+    <item msgid="1781492122915870416">"Nunca esgotar o tempo limite"</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"Muito devagar"</item>
