--- a/res/values-zh-rTW/arrays.xml
+++ b/res/values-zh-rTW/arrays.xml
@@ -46,6 +46,7 @@
     <item msgid="7001195990902244174">"2 分鐘"</item>
     <item msgid="5721688686241190620">"10 分鐘"</item>
     <item msgid="7156442995039264948">"30 分鐘"</item>
+    <item msgid="1781492122915870416">"從不逾時"</item>
   </string-array>
   <string-array name="tts_rate_entries">
     <item msgid="6041212618892492920">"非常慢"</item>
