--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -80,6 +80,7 @@
         <item>2 minutes</item>
         <item>10 minutes</item>
         <item>30 minutes</item>
+        <item>Never Timeout</item>
     </string-array>
 
     <!-- Do not translate. -->
@@ -96,6 +97,8 @@
         <item>600000</item>
         <!-- Do not translate. -->
         <item>1800000</item>
+        <!-- Do not translate. -->
+        <item>-1</item>
     </string-array>
 
     <!-- TTS settings -->
